fix off center search bar

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -202,6 +202,10 @@ nav ul a:hover {
 
 /*------------ CARDS --*/
 
+.card-panel {
+    padding: 10px;
+}
+
 .card-title {
     font-size: 1rem !important;
 }
